# tkm32f499_fw

./: .gitignore  README.md
tk499_fw/: CMakeLists.txt  README.md
tk499_fw/lib/Hal_lib/src/: HAL_can.c  HAL_i2c.c
tk499_fw/lib/Usb_lib/: ctrlitem.c  ctrlusb.c  usb_hal.h  usbapp.c  usbprop.c  usbprop.h  usbreg.c
tk499_fw/src/: main.c
tk499_fw/src/ap/: ap.c
tk499_fw/src/bsp/: bsp.c  bsp.h  rtos.c
tk499_fw/src/bsp/FreeRTOS/: FreeRTOSConfig.h
tk499_fw/src/bsp/FreeRTOS/Source/portable/GCC/ARM_CM4F/: port.c
tk499_fw/src/bsp/device/: tk499.h
tk499_fw/src/bsp/ldscript/: TKM32F499_FLASH.ld
tk499_fw/src/bsp/startup/: startup_tkm32f499.s
tk499_fw/src/common/hw/include/: cdc.h  uart.h  usb.h
tk499_fw/src/hw/: hw.c  hw.h  hw_def.h
tk499_fw/src/hw/driver/: cdc.c  led.c  uart.c  usb.c
tk499_fw/tools/: arm-none-eabi-gcc.cmake  tkm32f499.cfg
tk499_led/src/bsp/: bsp.c
tk499_led/src/hw/: hw_def.h
tk499_led/src/hw/driver/: led.c
